<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/analytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics" >
        </CheckBox>

        <TextView
            android:id="@+id/Gap1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" >
        </TextView>

        <CheckBox
            android:id="@+id/autologon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatic_logon" >
        </CheckBox>

        <TextView
            android:id="@+id/Gap2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" >
        </TextView>

        <CheckBox
            android:id="@+id/encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt" >
        </CheckBox>

        <TextView
            android:id="@+id/Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

</ScrollView>